--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@assets/*": ["./src/shared/assets/*"]
     }
   },
   "include": [
